kubernetes-networks/canary/web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "33"
spec:
  rules:
  - http:
    paths:
    - path: /web
      pathType: Prefix
      backend:
        service:
          name: web-svc
          port:
            number: 8000
    - path: /dashboard
      pathType: Prefix
      backend:
        service:
          name: kubernetes-dashboard-web
          port:
            number: 8000
